--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="col-md-8">
                     <div class="about-content text-md-start">
                         <p class="animate__animated animate__fadeInUp">
-                            Soy un desarrollador Full Stack Junior con sede en Granada, España. Me especializo en el desarrollo
+                            Soy un desarrollador Full Stack Junior en Granada, España. Me especializo en el desarrollo
                             de aplicaciones web modernas y eficientes, combinando tecnologías front-end y back-end.
                         </p>
                         <p class="animate__animated animate__fadeInUp">
