--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="foto_carnet_feli.png">
+    <link rel="icon" type="image/png" href="./assets/foto_carnet_feli.png">
     <title>Portafolio de Felipe Toledano</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -75,11 +75,11 @@
                 <div class="col-md-8">
                     <div class="about-content text-md-start">
                         <p class="animate__animated animate__fadeInUp">
-                            Soy un desarrollador Full Stack Junior en Granada, España. Me especializo en el desarrollo
+                            Soy un desarrollador Full Stack Junior. Me especializo en el desarrollo
                             de aplicaciones web modernas y eficientes, combinando tecnologías front-end y back-end.
                         </p>
                         <p class="animate__animated animate__fadeInUp">
-                            Mi formación en Desarrollo de Aplicaciones Multiplataforma (DAM) me ha proporcionado una sólida base
+                            Mi formación en Desarrollo de Aplicaciones Multiplataforma (DAM) y Desarrollo de Aplicaciones Web (DAW) me ha proporcionado una sólida base
                             en programación y arquitectura de software. Me apasiona especialmente el desarrollo front-end,
                             donde puedo combinar mi creatividad con mis habilidades técnicas para crear interfaces intuitivas
                             y atractivas.
