--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <h2 class="section-title text-center mb-4 animate__animated animate__fadeIn">Sobre Mí</h2>
             <div class="row align-items-center">
                 <div class="col-md-4 text-center text-md-start">
-                    <img src="./assets/foto_carnet_feli.png" alt="Felipe Toledano" class="about-img animate__animated animate__fadeIn">
+                    <img src="./assets/archivo18" alt="Felipe Toledano" class="about-img animate__animated animate__fadeIn">
                 </div>
                 <div class="col-md-8">
                     <div class="about-content text-md-start">
