--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="./assets/foto_carnet_feli.png">
+    <link rel="icon" type="image/jpg" href="./assets/archivo18.jpg">
     <title>Portafolio de Felipe Toledano</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -70,7 +70,7 @@
             <h2 class="section-title text-center mb-4 animate__animated animate__fadeIn">Sobre Mí</h2>
             <div class="row align-items-center">
                 <div class="col-md-4 text-center text-md-start">
-                    <img src="./assets/archivo18" alt="Felipe Toledano" class="about-img animate__animated animate__fadeIn">
+                    <img src="./assets/archivo18.jpg" alt="Felipe Toledano" class="about-img animate__animated animate__fadeIn">
                 </div>
                 <div class="col-md-8">
                     <div class="about-content text-md-start">
