--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                         <a class="nav-link" href="#about">Sobre Mí</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#education">Educación</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#experience">Experiencia</a>
                     </li>
                     <li class="nav-item">
@@ -60,6 +63,9 @@
             <div class="d-flex justify-content-center gap-3 animate__animated animate__fadeInUp">
                 <a href="#projects" class="btn btn-primary">Ver Proyectos</a>
                 <a href="#contact" class="btn btn-outline-primary">Contactar</a>
+                <a href="./assets/CV_Felipe_Toledano.pdf" class="btn btn-success" download>
+                    <i class="fas fa-download me-2"></i>Descargar CV
+                </a>
             </div>
         </div>
     </section>
@@ -89,6 +95,49 @@
                             de datos tanto SQL como NoSQL. Mi objetivo es crear soluciones que no solo funcionen bien, sino que
                             también proporcionen una excelente experiencia de usuario.
                         </p>
+                        <p class="animate__animated animate__fadeInUp">
+                            Durante mi formación, he adquirido experiencia en:
+                            <ul class="learning-list">
+                                <li>Desarrollo web full-stack con tecnologías modernas</li>
+                                <li>Implementación de APIs RESTful</li>
+                                <li>Diseño y gestión de bases de datos</li>
+                                <li>Control de versiones y metodologías ágiles</li>
+                                <li>Desarrollo de aplicaciones móviles nativas</li>
+                            </ul>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Nueva sección de Educación -->
+    <section id="education" class="py-5">
+        <div class="container">
+            <h2 class="section-title text-center mb-4 animate__animated animate__fadeIn">Educación</h2>
+            <div class="row g-4">
+                <div class="col-md-4 animate__animated animate__fadeInLeft">
+                    <div class="education-card">
+                        <img src="./assets/institutions/stem.png" alt="STEM Granada" class="institution-img mb-3">
+                        <h3>Desarrollo de Aplicaciones Web</h3>
+                        <p class="institution">STEM Granada</p>
+                        <p class="year">2024</p>
+                    </div>
+                </div>
+                <div class="col-md-4 animate__animated animate__fadeIn">
+                    <div class="education-card">
+                        <img src="./assets/institutions/medac.jpg" alt="Medac Nevada" class="institution-img mb-3">
+                        <h3>Desarrollo de Aplicaciones Multiplataforma</h3>
+                        <p class="institution">Medac Nevada</p>
+                        <p class="year">2023</p>
+                    </div>
+                </div>
+                <div class="col-md-4 animate__animated animate__fadeInRight">
+                    <div class="education-card">
+                        <img src="./assets/institutions/hlanz.jpg" alt="IES Hermenegildo Lanz" class="institution-img mb-3">
+                        <h3>Sistemas Microinformáticos y Redes</h3>
+                        <p class="institution">IES Hermenegildo Lanz</p>
+                        <p class="year">2021</p>
                     </div>
                 </div>
             </div>
@@ -112,7 +161,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-6 animate__animated animate__fadeInRight">
+                <div class="col-md-6 animate__animated animate__fadeIn">
                     <div class="experience-card">
                         <h3 class="card-title">Técnico Informático</h3>
                         <p><strong>Universidad de Relaciones Laborales</strong> | Abril - Junio 2022</p>
