[1.0.3] Actualización experiencia, responsive buttons.

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <div class="container">
                 <h2 class="section-title text-center mb-4 animate__animated animate__fadeIn">Experiencia</h2>
                 <div class="row g-4">
-                    <div class="col-md-6 animate__animated animate__fadeInLeft">
+                    <div class="col-md-4 animate__animated animate__fadeInLeft">
                         <div class="experience-card">
                             <h3 class="card-title">Junior Front Developer</h3>
                             <p><strong>Arena Pro Gaming</strong> | Abril - Junio 2024</p>
@@ -167,7 +167,19 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-md-6 animate__animated animate__fadeIn">
+                    <div class="col-md-4 animate__animated animate__fadeIn">
+                        <div class="experience-card">
+                            <h3 class="card-title">Desarrollador WordPress</h3>
+                            <p><strong>Ruiz Lara & Asociados</strong> | Enero - Marzo 2023</p>
+                            <ul>
+                                <li>Desarrollo y mantenimiento de sitios web</li>
+                                <li>Personalización de temas WordPress</li>
+                                <li>Optimización SEO y rendimiento</li>
+                                <li>Integración de plugins y funcionalidades</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-md-4 animate__animated animate__fadeInRight">
                         <div class="experience-card">
                             <h3 class="card-title">Técnico Informático</h3>
                             <p><strong>Universidad de Relaciones Laborales</strong> | Abril - Junio 2022</p>
@@ -265,6 +277,22 @@
                             <div class="card-body">
                                 <i class="fab fa-github fa-3x mb-3"></i>
                                 <h5 class="card-title">GitHub</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6 animate__animated animate__fadeIn">
+                        <div class="card skill-card">
+                            <div class="card-body">
+                                <i class="fab fa-wordpress fa-3x mb-3"></i>
+                                <h5 class="card-title">WordPress</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6 animate__animated animate__fadeIn">
+                        <div class="card skill-card">
+                            <div class="card-body">
+                                <i class="fas fa-puzzle-piece fa-3x mb-3"></i>
+                                <h5 class="card-title">Elementor</h5>
                             </div>
                         </div>
                     </div>
