--- a/index.html
+++ b/index.html
@@ -214,13 +214,15 @@
                                         <h3 class="card-title">Desarrollador de Front-end</h3>
                                         <span class="job-type">Jornada completa</span>
                                     </div>
-                                    <p class="company-info"><strong>Hiberus</strong> | Jun. 2025 - Actualidad · 1 mes |
+                                    <p class="company-info"><strong>Hiberus</strong> | Jun. 2025 - Sep. 2025 · 7 mes |
                                         Granada, Andalucía, España | <span class="work-mode">Híbrido</span></p>
                                     <p class="position-description">
-                                        Formo parte del equipo de desarrollo en una de las empresas tecnológicas líderes
-                                        a nivel nacional,
-                                        participando en proyectos de consultoría tecnológica, programación y soluciones
-                                        digitales.
+                                        Desarrollador Frontend con 7 meses de experiencia en la
+                                        creación de componentes Gutenberg (WordPress) con React.
+                                        Sólidos conocimientos en PHP, AJAX y Angular, con
+                                        experiencia en la implementación de diseños desde Figma.
+                                        Además, he colaborado en proyectos Java en entornos Liferay
+                                        y sistemas legacy, en el sector de banca y seguros.
                                     </p>
                                     <div class="skills-tags">
                                         <span class="badge bg-primary me-1 mb-1">PHP</span>
@@ -327,7 +329,8 @@
                             </div>
                             <p class="company-info"><strong>Universidad Granada Relaciones Laborales y Recursos
                                     Humanos</strong> | Abr. 2021 - Jun. 2021 · 3 meses | Granada, Andalucía, España |
-                                <span class="work-mode">Presencial</span></p>
+                                <span class="work-mode">Presencial</span>
+                            </p>
                             <div class="skills-tags">
                                 <span class="badge bg-warning me-1 mb-1">Servicios administrados</span>
                                 <span class="badge bg-warning me-1 mb-1">Ofimática</span>
@@ -504,12 +507,75 @@
                                 <h5 class="card-title">Gutenberg</h5>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6 animate__animated animate__fadeIn">
+                    </div>                    <div class="col-md-3 col-sm-6 animate__animated animate__fadeIn">
                         <div class="card skill-card">
                             <div class="card-body">
                                 <i class="fab fa-laravel fa-3x mb-3"></i>
                                 <h5 class="card-title">Laravel</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6 animate__animated animate__fadeIn">
+                        <div class="card skill-card">
+                            <div class="card-body">
+                                <i class="fab fa-angular fa-3x mb-3"></i>
+                                <h5 class="card-title">Angular 17</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6 animate__animated animate__fadeIn">
+                        <div class="card skill-card">
+                            <div class="card-body">
+                                <i class="fab fa-microsoft fa-3x mb-3"></i>
+                                <h5 class="card-title">Azure DevOps</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6 animate__animated animate__fadeIn">
+                        <div class="card skill-card">
+                            <div class="card-body">
+                                <i class="fas fa-cogs fa-3x mb-3"></i>
+                                <h5 class="card-title">Jenkins</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6 animate__animated animate__fadeIn">
+                        <div class="card skill-card">
+                            <div class="card-body">
+                                <i class="fab fa-atlassian fa-3x mb-3"></i>
+                                <h5 class="card-title">JIRA</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6 animate__animated animate__fadeIn">
+                        <div class="card skill-card">
+                            <div class="card-body">
+                                <i class="fas fa-layer-group fa-3x mb-3"></i>
+                                <h5 class="card-title">Liferay</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6 animate__animated animate__fadeIn">
+                        <div class="card skill-card">
+                            <div class="card-body">
+                                <i class="fas fa-database fa-3x mb-3"></i>
+                                <h5 class="card-title">Oracle/MySQL</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6 animate__animated animate__fadeIn">
+                        <div class="card skill-card">
+                            <div class="card-body">
+                                <i class="fas fa-sync-alt fa-3x mb-3"></i>
+                                <h5 class="card-title">Scrum</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6 animate__animated animate__fadeIn">
+                        <div class="card skill-card">
+                            <div class="card-body">
+                                <i class="fas fa-database fa-3x mb-3"></i>
+                                <h5 class="card-title">SQL</h5>
                             </div>
                         </div>
                     </div>
