--- a/index.html
+++ b/index.html
@@ -250,12 +250,12 @@
                             <p class="company-info"><strong>Hiberus</strong> | Mar. 2025 - Jun. 2025 · 4 meses |
                                 Granada, Andalucía, España | <span class="work-mode">Presencial</span></p>
                             <p class="position-description">
-                                Desarrollador Frontend especializado en la creación de componentes Gutenberg para
-                                WordPress,
-                                utilizando React y React Vite, e integrándolos en un entorno ágil con metodología Scrum.
-                                Experiencia en el desarrollo con PHP, AJAX y Angular, así como en tareas de diseño
-                                utilizando Figma.
-                                Participación activa en reuniones diarias (dailys) dentro del sector de banca y seguros.
+                                Desarrollador Frontend con 7 meses de experiencia en la
+                                creación de componentes Gutenberg (WordPress) con React.
+                                Sólidos conocimientos en PHP, AJAX y Angular, con
+                                experiencia en la implementación de diseños desde Figma.
+                                Además, he colaborado en proyectos Java en entornos Liferay
+                                y sistemas legacy, en el sector de banca y seguros.
                             </p>
                             <div class="skills-tags">
                                 <span class="badge bg-secondary me-1 mb-1">React.js</span>
@@ -507,7 +507,8 @@
                                 <h5 class="card-title">Gutenberg</h5>
                             </div>
                         </div>
-                    </div>                    <div class="col-md-3 col-sm-6 animate__animated animate__fadeIn">
+                    </div>
+                    <div class="col-md-3 col-sm-6 animate__animated animate__fadeIn">
                         <div class="card skill-card">
                             <div class="card-body">
                                 <i class="fab fa-laravel fa-3x mb-3"></i>
@@ -534,7 +535,7 @@
                     <div class="col-md-3 col-sm-6 animate__animated animate__fadeIn">
                         <div class="card skill-card">
                             <div class="card-body">
-                                <i class="fas fa-cogs fa-3x mb-3"></i>
+                                <i class="fas fa-tools fa-3x mb-3"></i>
                                 <h5 class="card-title">Jenkins</h5>
                             </div>
                         </div>
@@ -550,7 +551,7 @@
                     <div class="col-md-3 col-sm-6 animate__animated animate__fadeIn">
                         <div class="card skill-card">
                             <div class="card-body">
-                                <i class="fas fa-layer-group fa-3x mb-3"></i>
+                                <i class="fas fa-server fa-3x mb-3"></i>
                                 <h5 class="card-title">Liferay</h5>
                             </div>
                         </div>
@@ -566,7 +567,7 @@
                     <div class="col-md-3 col-sm-6 animate__animated animate__fadeIn">
                         <div class="card skill-card">
                             <div class="card-body">
-                                <i class="fas fa-sync-alt fa-3x mb-3"></i>
+                                <i class="fas fa-users fa-3x mb-3"></i>
                                 <h5 class="card-title">Scrum</h5>
                             </div>
                         </div>
